--- a/docs/home.mdx
+++ b/docs/home.mdx
@@ -71,7 +71,7 @@ import useBaseUrl from "@docusaurus/useBaseUrl";
 	    	<a className="block" href="/mine-hnt"><img className="docicon" src={useBaseUrl("img/icons/dociconblue.svg")} /> What is a Helium Miner?</a>
 	    	<a className="block" href="https://helium.com/mine"><img className="docicon" src={useBaseUrl("img/icons/dociconblue.svg")} /> Approved Hotspots</a>
 			<a className="block" href="/mine-hnt/validators"><img className="docicon" src={useBaseUrl("img/icons/dociconblue.svg")} /> Run an HNT Validator</a>
-	    	<a className="block" href="/mine-hnt/hotspot-makers"><img className="docicon" src={useBaseUrl("img/icons/dociconblue.svg")} /> Hotspot Makers</a>
+	    	<a className="block" href="/mine-hnt/full-hotspots/#becoming-a-maker"><img className="docicon" src={useBaseUrl("img/icons/dociconblue.svg")} /> Become a Maker</a>
 			<a className="block" href="/mine-hnt/build-a-packet-forwarder"><img className="docicon" src={useBaseUrl("img/icons/dociconblue.svg")} /> Build a Packet Forwarder</a>
 	    </div>
 	    <div class="col col--6 blockgreen"  style={{marginBottom: 100}} >
