Fix dead Maker links in all docs

--- a/docs/mine-hnt/full-hotspots/become-a-maker/burn-hnt-to-maker-wallet.mdx
+++ b/docs/mine-hnt/full-hotspots/become-a-maker/burn-hnt-to-maker-wallet.mdx
@@ -8,7 +8,7 @@ slug: /mine-hnt/full-hotspots/become-a-maker/burn-hnt-to-maker-wallet
 
 import useBaseUrl from "@docusaurus/useBaseUrl";
 
-Any [approved Hotspot Maker](/mine-hnt/hotspot-makers/approved-makers) is responsible for supplying Data Credits (DCs) to the onboarding server for Hotspots they sell. They do this by burning HNT to their
+Any [approved Hotspot Maker](/mine-hnt/full-hotspots) is responsible for supplying Data Credits (DCs) to the onboarding server for Hotspots they sell. They do this by burning HNT to their
 specific maker address. 
 
 :::info 
@@ -19,7 +19,7 @@ A full list of approved maker wallet addresses [can be seen via this API](https:
 
 ## Maker Wallet Address Integration
 
-As an approved Maker, you will supply the Helium Foundation with the onboarding details for all the Hotspots you manufacture and distribute. In turn, the Helium Foundation adds them to the onboarding server. When a Hotspot is onboarded by your end customer, the onboarding server knows to associate it with your Maker ID, and associated Maker Wallet address. If, when a Hotspot is onboarded, it's present in the onboarding server and you have ample Data Credits to pay the onboarding fees, the blockchain will add the Hotspot. And if you've [integrated your Hotspot in the Hotspot App onboarding flow](/mine-hnt/hotspot-makers/hotspot-integration-testing), the Wallet knows to use your approved Maker Wallet address. At this point, the Data Credits will be used for the transactions with your wallet address as the payer. 
+As an approved Maker, you will supply the Helium Foundation with the onboarding details for all the Hotspots you manufacture and distribute. In turn, the Helium Foundation adds them to the onboarding server. When a Hotspot is onboarded by your end customer, the onboarding server knows to associate it with your Maker ID, and associated Maker Wallet address. If, when a Hotspot is onboarded, it's present in the onboarding server and you have ample Data Credits to pay the onboarding fees, the blockchain will add the Hotspot. And if you've [integrated your Hotspot in the Hotspot App onboarding flow](/mine-hnt/full-hotspots/become-a-maker/hotspot-integration-testing), the Wallet knows to use your approved Maker Wallet address. At this point, the Data Credits will be used for the transactions with your wallet address as the payer. 
 
 
 ## Hotspot Data Credit Fees
