--- a/docs/mine-hnt/mine-hnt.mdx
+++ b/docs/mine-hnt/mine-hnt.mdx
@@ -20,10 +20,10 @@ import useBaseUrl from "@docusaurus/useBaseUrl";
                     <h1 style={{marginTop:0}}>Mine HNT</h1>
                     <h2 className="subtitle">Helium Hotspots mine $HNT and were originally built by Helium, Inc. but are now built by our growing ecosystem of approved manufacturers.</h2>
                     <div>
-                        <a href="/mine-hnt/hotspot-makers/approved-makers"><span class="badge badge--secondary">Approved Makers</span></a>
-                        <a href="/mine-hnt/hotspot-makers/maker-approval-auditing"><span class="badge badge--secondary">Maker Approval</span></a>
-                        <a href="/mine-hnt/hotspot-makers/maker-apps"><span class="badge badge--secondary">Maker Apps</span></a>
-                        <a href="/mine-hnt/hotspot-makers/understanding-hotspot-status"><span class="badge badge--secondary">Understanding Hotspot Status</span></a>
+                        <a href="/mine-hnt/full-hotspots"><span class="badge badge--secondary">Approved Makers</span></a>
+                        <a href="/mine-hnt/full-hotspots/become-a-maker/maker-approval-auditing"><span class="badge badge--secondary">Maker Approval</span></a>
+                        <a href="/mine-hnt/maker-apps"><span class="badge badge--secondary">Maker Apps</span></a>
+                        <a href="/mine-hnt/understanding-hotspot-status"><span class="badge badge--secondary">Understanding Hotspot Status</span></a>
                         <a href="/mine-hnt/validators"><span class="badge badge--secondary">Run a Validator</span></a>	
                     </div>
                 </div>
