--- a/docs/blockchain/mining/mining.mdx
+++ b/docs/blockchain/mining/mining.mdx
@@ -27,7 +27,7 @@ according to the following distribution:
 
 | Reward Type           | Description                                                                                                       |
 | :-------------------- | :---------------------------------------------------------------------------------------------------------------- |
-| PoC Challenger        | Rewarded to any Hotspot that creates a valid PoC challenge and submits the corresponding receipt to the blockchain. |
+| PoC Challenger        | Rewarded to any Validator that creates a valid PoC challenge and submits the corresponding receipt to the blockchain. |
 | PoC Challengees       | Awarded to any Hotspot that transmits a PoC packet after being targeted by the challenger.                                                   |
 | Witnesses             | Distributed to all Hotspots that witness a beacon packet as part of a PoC Challenge.                                       |
 | Consensus Group       | Divided equally among the Validators that are part of the outgoing Consensus Group, responsible for mining blocks.     |
@@ -37,8 +37,7 @@ according to the following distribution:
 **_Do I Have To Actively Participate to Earn Rewards Once My Hotspot is
 Deployed?_**
 
-No. Once your Hotspot is completely deployed and fully synced with the Helium
-blockchain, you as the owner are not required to do anything else in order to
+No. Once your Hotspot is completely deployed, you as the owner are not required to do anything else in order to
 earn $HNT. Your Hotspot will perform all of the above activities on its own
 while it runs.
 
